# esp32multical21

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-build.sh  make_ota_image  make_ota_image_c3  make_ota_image_wroom32  sdkconfig.defaults
.cargo/: config.toml
src/: apiserver.rs  cc1101.rs  config.rs  esphome_api.rs  form.js  lib.rs  measure.rs  mqtt.rs  mqtt_sender.rs  multical21.rs  radio.rs  state.rs  wifi.rs  wmbus.rs
static/: index.css
templates/: index.html.ask
