# Cargo.toml

[package]
name = "esp32multical21"
version = "0.1.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"


[features]
default = ["esp32c3"]
esp32s = []
esp32c3 = []


[dependencies]
anyhow = "1"
askama = "0"
axum = { version = "0", features = ["http1", "json"] }
axum-macros = "0"
aes = "0.8"
chrono = "0"
ctr = "0.9"
crc = "3"
embedded-svc = { version = "0", features = ["experimental"] }
esp-idf-sys = { version = "0", features = ["binstart"] }
esp-idf-svc = { version = "0", features = ["alloc", "experimental"] }
esp-idf-hal = "0"
log = "0"
postcard = { version = "1", features = ["alloc", "use-crc"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util"] }

# tower-http = { version = "0", features = ["trace"] }
# tracing = "0"
# tracing-subscriber = { version = "0", features = ["env-filter"] }


[build-dependencies]
build-data = "0"
embuild = "0"
anyhow = "1"


[profile.release]
debug = true
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = false


[profile.dev]
debug = true
opt-level = 2
lto = "off"

# EOF
