# Cargo.toml

[package]
name = "esp32multical21"
version = "1.4.3"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"


[features]
default = ["esp32c3"]
esp32s = []
esp32c3 = []


[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["http1", "json"] }
axum-macros = "0.5"
aes = "0.8"
chrono = "0.4"
cc1101 = { version = "0.1", features = ["std"] }
ctr = "0.9"
crc = "3.4"
embedded-svc = { version = "0.28", features = ["experimental"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = { version = "0.51", features = ["alloc", "experimental"] }
esp-idf-hal = "0.45"
log = "0.4"
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt", "net", "io-util"] }
thiserror = "2.0"

# tower-http = { version = "0", features = ["trace"] }
# tracing = "0"
# tracing-subscriber = { version = "0", features = ["env-filter"] }


[build-dependencies]
anyhow = "1.0"
build-data = "0.3"
embuild = "0.33"


[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"

# EOF
